--- a/OPSC7311POE/app/src/main/res/layout/activity_enter_time_sheet.xml
+++ b/OPSC7311POE/app/src/main/res/layout/activity_enter_time_sheet.xml
@@ -12,68 +12,89 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="match_parent"
+        android:layout_width="360dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
         android:layout_marginTop="16dp"
-        android:background="@color/white"
+        android:background="@drawable/roundstyle"
         android:fontFamily="sans-serif-medium"
-
+        android:backgroundTint="@color/black"
         android:text="@string/enter_hours_spent"
         android:textAlignment="center"
-        android:textColor="@color/Red"
+        android:textColor="@color/white"
         android:textSize="32sp" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="250dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/roundstyle"
-        android:backgroundTint="@color/black"
-
-        android:fontFamily="sans-serif-medium"
-        android:text="@string/cat_select"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="28sp" />
-
-    <Spinner
-        android:id="@+id/spinId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:background="@drawable/roundstyle"
-        android:layout_marginTop="16dp"
-        android:backgroundTint="@color/white"
-        android:padding="30dp" />
-
-    <TextView
-        android:id="@+id/tvTaskSpinner"
-        android:layout_width="250dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/roundstyle"
-
-        android:backgroundTint="@color/black"
-        android:fontFamily="sans-serif-medium"
-        android:text="@string/task_select"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="28sp" />
-    <Spinner
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/spinId2"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/roundstyle"
-        android:backgroundTint="@color/white"
-
-        android:padding="30dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="75dp"
+        android:layout_height="69dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tvTaskSpinner"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="16dp"
+
+
+            android:background="@drawable/roundstyle"
+            android:fontFamily="sans-serif-medium"
+            android:text="@string/task_select"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="28sp" />
+
+        <TextView
+            android:id="@+id/tvCategorySpinner"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginLeft="40dp"
+
+
+            android:layout_marginTop="16dp"
+            android:background="@drawable/roundstyle"
+            android:fontFamily="sans-serif-medium"
+            android:text="@string/cat_select"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="28sp" />
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Spinner
+            android:id="@+id/spinId"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_marginLeft="30dp"
+
+            android:background="@drawable/roundstyle"
+            android:backgroundTint="@color/white"
+            android:padding="30dp" />
+
+        <Spinner
+            android:id="@+id/spinId2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="100dp"
+
+            android:background="@drawable/roundstyle"
+
+            android:backgroundTint="@color/white"
+            android:padding="30dp" />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="108dp"
         android:layout_marginTop="100dp"
         android:orientation="horizontal">
 
@@ -85,11 +106,11 @@
             android:layout_marginHorizontal="10dp"
             android:layout_weight="1"
             android:background="@drawable/roundstyle"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/black"
             android:fontFamily="sans-serif-medium"
             android:text="@string/enter_time"
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="28sp" />
 
         <TextView
@@ -100,20 +121,39 @@
             android:layout_marginHorizontal="10dp"
             android:layout_weight="1"
             android:background="@drawable/roundstyle"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/black"
             android:fontFamily="sans-serif-medium"
             android:text="@string/select_date"
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="28sp" />
 
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/img_photoUp"
+        android:layout_width="72dp"
+        android:layout_height="55dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="70dp"
+        app:srcCompat="@drawable/uploadphoto" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="70dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="@string/uploadpic"
+        android:textColor="@color/black"
+        android:textSize="18sp" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="139dp"
 
-        android:layout_marginTop="22dp"
+        android:layout_marginTop="88dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
