--- a/OPSC7311POE/app/src/main/res/layout/activity_insert_data.xml
+++ b/OPSC7311POE/app/src/main/res/layout/activity_insert_data.xml
@@ -40,11 +40,13 @@
         android:id="@+id/textView99"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="End Time"
         android:textColor="#000000"
         android:textSize="16sp"
-        tools:layout_editor_absoluteX="12dp"
-        tools:layout_editor_absoluteY="540dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/view13" />
 
     <TextView
         android:id="@+id/tv_Category"
@@ -60,13 +62,14 @@
 
     <EditText
         android:id="@+id/edtTaskName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="194dp"
+        android:layout_height="43dp"
         android:ems="10"
         android:inputType="text"
-        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
-        tools:layout_editor_absoluteX="201dp"
-        tools:layout_editor_absoluteY="364dp" />
+        app:layout_constraintBottom_toTopOf="@+id/view10"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/view9"
+        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
     <TextView
         android:id="@+id/tvAddTask"
@@ -75,6 +78,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
         android:text="@string/add"
+        android:textColor="#2196F3"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
@@ -104,11 +108,13 @@
         android:id="@+id/tv_Name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="@string/name_"
         android:textColor="@color/black"
         android:textSize="16sp"
-        tools:layout_editor_absoluteX="12dp"
-        tools:layout_editor_absoluteY="372dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/view9" />
 
     <View
         android:id="@+id/view9"
@@ -125,11 +131,13 @@
         android:id="@+id/tv_Colour"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="Repeatable?"
         android:textColor="@color/black"
         android:textSize="16sp"
-        tools:layout_editor_absoluteX="12dp"
-        tools:layout_editor_absoluteY="456dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/view11" />
 
     <View
         android:id="@+id/view10"
@@ -219,43 +227,51 @@
         android:id="@+id/textView32"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="Start Time"
         android:textColor="@color/black"
         android:textSize="16sp"
-        tools:layout_editor_absoluteX="12dp"
-        tools:layout_editor_absoluteY="496dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/view12" />
 
     <EditText
         android:id="@+id/edtStart"
-        android:layout_width="164dp"
-        android:layout_height="38dp"
+        android:layout_width="188dp"
+        android:layout_height="37dp"
         android:ems="10"
         android:inputType="text"
         android:textSize="10sp"
+        app:layout_constraintBottom_toTopOf="@+id/view13"
+        app:layout_constraintTop_toTopOf="@+id/view12"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
-        tools:layout_editor_absoluteX="238dp"
-        tools:layout_editor_absoluteY="502dp" />
+        tools:layout_editor_absoluteX="214dp" />
 
     <EditText
         android:id="@+id/edtEnd"
-        android:layout_width="164dp"
+        android:layout_width="187dp"
         android:layout_height="38dp"
+        android:layout_marginEnd="8dp"
         android:ems="10"
         android:inputType="text"
         android:textSize="10sp"
-        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
-        tools:layout_editor_absoluteX="238dp"
-        tools:layout_editor_absoluteY="540dp" />
+        app:layout_constraintBottom_toTopOf="@+id/view14"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/view13"
+        app:layout_constraintVertical_bias="1.0"
+        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
     <TextView
         android:id="@+id/textView34"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="89dp"
+        android:layout_height="22dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="@string/description"
         android:textColor="@color/black"
         android:textSize="16sp"
-        tools:layout_editor_absoluteX="12dp"
-        tools:layout_editor_absoluteY="416dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/view10" />
 
     <EditText
         android:id="@+id/edtDescription"
@@ -265,17 +281,20 @@
         android:inputType="text"
         android:text="@string/task_description"
         android:textSize="10sp"
-        tools:ignore="TouchTargetSizeCheck"
-        tools:layout_editor_absoluteX="202dp"
-        tools:layout_editor_absoluteY="409dp" />
+        app:layout_constraintBottom_toTopOf="@+id/view11"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/view10"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <Switch
         android:id="@+id/repeatSwitch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:ignore="TouchTargetSizeCheck"
-        tools:layout_editor_absoluteX="349dp"
-        tools:layout_editor_absoluteY="456dp" />
+        android:layout_marginEnd="80dp"
+        app:layout_constraintBottom_toTopOf="@+id/view12"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/view11"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_NavBar"
@@ -287,6 +306,7 @@
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:layout_width="416dp"
             android:layout_height="105dp"
+            android:background="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
@@ -452,11 +472,13 @@
         android:id="@+id/textView"
         android:layout_width="72dp"
         android:layout_height="26dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:text="@string/category"
         android:textColor="@color/black"
         android:textSize="16sp"
-        tools:layout_editor_absoluteX="10dp"
-        tools:layout_editor_absoluteY="319dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/view8" />
 
     <Spinner
         android:id="@+id/spinner"
@@ -464,9 +486,9 @@
         android:layout_height="36dp"
         app:layout_constraintBottom_toTopOf="@+id/view9"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.954"
+        app:layout_constraintHorizontal_bias="0.966"
         app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toTopOf="@+id/view8"
-        app:layout_constraintVertical_bias="0.562" />
+        tools:ignore="TouchTargetSizeCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
