--- a/OPSC7311POE/app/src/main/res/layout/activity_main.xml
+++ b/OPSC7311POE/app/src/main/res/layout/activity_main.xml
@@ -14,22 +14,25 @@
         android:id="@+id/tvBlackBox"
         android:layout_width="296dp"
         android:layout_height="87dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="32dp"
 
         android:background="@drawable/roundstyle"
         android:backgroundTint="@color/black"
         android:text=""
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.513"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="307dp"
         android:layout_height="370dp"
+        android:layout_marginTop="60dp"
         android:background="@drawable/roundstyle"
         android:backgroundTint="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/cl_NavBar"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.519"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvBlackBox">
 
@@ -51,7 +54,7 @@
             android:layout_marginEnd="16dp"
             android:text="@string/create_category"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.86"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/btnTask"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -64,22 +67,44 @@
             android:text="@string/create_entry"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btnTask" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="120dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="28dp"
+            android:layout_marginEnd="16dp"
+            android:text="@string/view_tasks"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnCategory" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="120dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="28dp"
+            android:text="@string/view_timesheet"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnTimesheet" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_NavBar"
-        android:layout_width="411dp"
-        android:layout_height="112dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        android:layout_width="414dp"
+        android:layout_height="141dp"
+        android:layout_marginTop="60dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:layout_width="416dp"
-            android:layout_height="105dp"
+            android:layout_width="411dp"
+            android:layout_height="125dp"
             android:background="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="415dp"
@@ -107,10 +132,11 @@
                             android:id="@+id/tv_Profile"
                             android:layout_width="83dp"
                             android:layout_height="21dp"
-                            android:layout_marginBottom="4dp"
+                            android:layout_marginBottom="16dp"
                             android:gravity="center"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="0.523"
                             app:layout_constraintStart_toStartOf="parent"
                             tools:text="@string/profile" />
 
@@ -118,7 +144,7 @@
                             android:id="@+id/ib_Profile"
                             android:layout_width="65dp"
                             android:layout_height="70dp"
-                            android:layout_marginTop="16dp"
+                            android:layout_marginTop="4dp"
                             android:background="@color/white"
                             android:scaleType="centerInside"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -140,11 +166,11 @@
                             android:id="@+id/tv_Home"
                             android:layout_width="83dp"
                             android:layout_height="21dp"
-                            android:layout_marginBottom="4dp"
+                            android:layout_marginBottom="16dp"
                             android:gravity="center"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.526"
+                            app:layout_constraintHorizontal_bias="0.523"
                             app:layout_constraintStart_toStartOf="parent"
                             tools:text="@string/home" />
 
@@ -152,11 +178,11 @@
                             android:id="@+id/ib_Home"
                             android:layout_width="65dp"
                             android:layout_height="70dp"
-                            android:layout_marginTop="16dp"
+                            android:layout_marginTop="4dp"
                             android:background="@color/white"
                             android:scaleType="centerInside"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.512"
+                            app:layout_constraintHorizontal_bias="0.589"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
                             app:srcCompat="@drawable/house"
@@ -174,11 +200,11 @@
                             android:id="@+id/tv_calendar"
                             android:layout_width="83dp"
                             android:layout_height="21dp"
-                            android:layout_marginBottom="4dp"
+                            android:layout_marginBottom="16dp"
                             android:gravity="center"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.473"
+                            app:layout_constraintHorizontal_bias="0.523"
                             app:layout_constraintStart_toStartOf="parent"
                             tools:text="@string/calendar" />
 
@@ -186,7 +212,7 @@
                             android:id="@+id/ib_Calendar"
                             android:layout_width="65dp"
                             android:layout_height="70dp"
-                            android:layout_marginTop="16dp"
+                            android:layout_marginTop="4dp"
                             android:background="@color/white"
                             android:scaleType="centerInside"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -208,11 +234,11 @@
                             android:id="@+id/tv_timer"
                             android:layout_width="83dp"
                             android:layout_height="21dp"
-                            android:layout_marginBottom="4dp"
+                            android:layout_marginBottom="16dp"
                             android:gravity="center"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.526"
+                            app:layout_constraintHorizontal_bias="0.523"
                             app:layout_constraintStart_toStartOf="parent"
                             tools:text="@string/timer" />
 
@@ -220,10 +246,11 @@
                             android:id="@+id/ib_Timer"
                             android:layout_width="65dp"
                             android:layout_height="70dp"
-                            android:layout_marginTop="16dp"
+                            android:layout_marginTop="4dp"
                             android:background="@color/white"
                             android:scaleType="centerInside"
                             app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="0.512"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
                             app:srcCompat="@drawable/timer"
